# lvgl-windows-sim-vscode-master

./: CMakeLists.txt  LICENSE  README.md  instructions.md  lv_conf.h  lv_drv_conf.h  lv_ex_conf.h  main.c  mouse_cursor_icon.c
SDL2/include/: SDL.h
lv_drivers/indev/: keyboard.h  mouse.h  mousewheel.h
lv_drivers/sdl/: sdl.h
lvgl/src/extra/: extra.mk  lv_extra.c
lvgl/src/extra/libs/fsdrv/: lv_fs_win32.c
lvgl/src/extra/widgets/spinbox/: lv_spinbox.h
ui/: ui.c  ui.h  ui_events.c  ui_font_Big.c  ui_font_Medium.c  ui_font_Number.c  ui_font_Small.c  ui_font_Small_Font.c  ui_helpers.c  ui_helpers.h  ui_img_943020738.c  ui_img_arrow_down_png.c  ui_img_arrow_left_png.c  ui_img_arrow_right_png.c  ui_img_arrow_up_png.c  ui_img_battery_bg_png.c  ui_img_btn_main_off_png.c  ui_img_btn_main_on_png.c  ui_img_btn_move_png.c  ui_img_btn_pad_bottom_png.c  ui_img_btn_pad_top_png.c  ui_img_btn_print_down_png.c  ui_img_btn_print_png.c  ui_img_btn_print_top_off_png.c  ui_img_btn_setting_png.c  ui_img_btn_z_botton_png.c  ui_img_btn_z_top_png.c  ui_img_ebike_bg_png.c  ui_img_icn_battery_png.c  ui_img_icn_bed_png.c  ui_img_icn_bike_png.c  ui_img_icn_charge_png.c  ui_img_icn_flash_png.c  ui_img_icn_head_png.c  ui_img_icn_lock_png.c  ui_img_icn_ok_png.c  ui_img_icn_pause_png.c  ui_img_icn_pc_png.c  ui_img_icn_stop_png.c  ui_img_icn_time_1_png.c  (+18 more)
