cmake_minimum_required(VERSION 3.0.0)
project(LVGL_SIM VERSION 0.0.1)

set(CMAKE_CXX_STANDARD 11) 
set(CMAKE_CXX_STANDARD_REQUIRED True) 

set(SDL2_DLL SDL2/SDL2.dll)
set(MAIN main.c)

file(GLOB_RECURSE DIR_SRC_DRIVERS_SRCS "${PROJECT_SOURCE_DIR}/lv_drivers/*.cpp" "${PROJECT_SOURCE_DIR}/lv_drivers/*.c")
file(GLOB_RECURSE DIR_SRC_LVGL_SRCS "${PROJECT_SOURCE_DIR}/lvgl/*.cpp" "${PROJECT_SOURCE_DIR}/lvgl/*.c")
file(GLOB_RECURSE DIR_SRC_UI_SRCS "${PROJECT_SOURCE_DIR}/ui/*.cpp" "${PROJECT_SOURCE_DIR}/ui/*.c")

set(DIR_SRC_SRCS ${DIR_SRC_DRIVERS_SRCS} ${DIR_SRC_LVGL_SRCS} ${DIR_SRC_UI_SRCS} ${DIR_SRC_SDL_SRCS} ${PROJECT_SOURCE_DIR}/${MAIN})

add_executable(${PROJECT_NAME} ${DIR_SRC_SRCS})

target_link_libraries(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/${SDL2_DLL})
